--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,18 @@ plugins {
     id 'kotlin-android'
 }
 
+def compose_version = '1.4.2'
+def compose_nav_version = "2.5.3"
+def view_model_compose_version = '2.6.0'
+def coil_version = '2.3.0'
+
 android {
-    compileSdk 31
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.shutterfly.pixabaygallery"
         minSdk 24
-        targetSdk 31
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -32,6 +37,10 @@ android {
 
     buildFeatures {
         viewBinding true
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.4.1'
     }
 }
 
@@ -39,7 +48,6 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.paging:paging-runtime-ktx:3.0.1'
     implementation 'androidx.activity:activity-ktx:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
@@ -55,4 +63,17 @@ dependencies {
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+
+    // Paging
+    implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
+    implementation 'androidx.paging:paging-compose:1.0.0-alpha18'
+
+    // Compose
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.navigation:navigation-compose:$compose_nav_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$view_model_compose_version"
+
+    // Coil
+    implementation("io.coil-kt:coil-compose:$coil_version")
 }
