--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'com.google.devtools.ksp'
+    id "org.jetbrains.kotlin.kapt"
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -32,11 +35,11 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     namespace 'com.shutterfly.pixabaygallery'
 
@@ -55,7 +58,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
 
-    implementation 'io.coil-kt:coil-compose:2.4.0'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -65,8 +67,24 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
 
+    //Compose
+    implementation 'io.coil-kt:coil-compose:2.4.0'
     implementation 'androidx.compose.ui:ui-tooling-preview'
+    debugImplementation 'androidx.compose.ui:ui-tooling'
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
+    implementation "androidx.compose.material3:material3:1.1.0"
+    implementation("androidx.lifecycle:lifecycle-runtime-compose:2.6.1")
+    implementation "androidx.paging:paging-compose:1.0.0-alpha20"
+    implementation 'androidx.activity:activity-compose:1.7.2'
+
+    //Room
+    implementation "androidx.room:room-runtime:2.5.1"
+    annotationProcessor "androidx.room:room-compiler:2.5.1"
+    kapt "androidx.room:room-compiler:2.5.1"
+
+    //Compose Navigation
+    implementation 'io.github.raamcosta.compose-destinations:core:1.8.33-beta'
+    ksp 'io.github.raamcosta.compose-destinations:ksp:1.8.33-beta'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
