--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,11 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
+plugins {
+//    id 'com.google.devtools.ksp' version '1.8.10-1.0.9' apply false
+    id "org.jetbrains.kotlin.kapt" version "1.8.21"
+    id 'com.google.devtools.ksp' version '1.8.21-1.0.11'
+}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
