--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.debug
     }
 
     buildTypes {
@@ -49,24 +50,31 @@ android {
 }
 
 dependencies {
+
+    //KTX
     implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
     implementation 'androidx.activity:activity-ktx:1.7.2'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    //Paging
+    implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
+
+    //Lifecycle
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
 
+    //App Compat
+    implementation 'androidx.appcompat:appcompat:1.6.1'
 
+    //Material Design
+    implementation 'com.google.android.material:material:1.9.0'
+
+    //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    //Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.1"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1'
-
-    implementation 'com.github.bumptech.glide:glide:4.13.2'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
 
     //Compose
     implementation 'io.coil-kt:coil-compose:2.4.0'
@@ -74,7 +82,7 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-tooling'
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
     implementation "androidx.compose.material3:material3:1.1.0"
-    implementation("androidx.lifecycle:lifecycle-runtime-compose:2.6.1")
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.1"
     implementation "androidx.paging:paging-compose:1.0.0-alpha20"
     implementation 'androidx.activity:activity-compose:1.7.2'
 
@@ -87,7 +95,4 @@ dependencies {
     //Compose Navigation
     implementation 'io.github.raamcosta.compose-destinations:core:1.8.33-beta'
     ksp 'io.github.raamcosta.compose-destinations:ksp:1.8.33-beta'
-
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
 }
